unpackaged/main/default/objects/tspa__visual_journey_session_type__c/tspa__visual_journey_session_type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Visual Remote Assistant - Visual Journey</label>
</CustomObject>