unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__Is_Language_Active__c.field-meta.xml
<CustomField>
    <fullName>tspa__Is_Language_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Language active or Inactive control.</description>
    <label>Is Language Active</label>
    <type>Checkbox</type>
</CustomField>