unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__isActive__c.field-meta.xml
<CustomField>
    <fullName>tspa__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>