unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__Language__c.field-meta.xml
<CustomField>
    <fullName>tspa__Language__c</fullName>
    <label>Language</label>
    <length>200</length>
    <type>Text</type>
</CustomField>