unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__Mobile__c.field-meta.xml
<CustomField>
    <fullName>tspa__Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile</label>
    <type>Checkbox</type>
</CustomField>