unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__Modified_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Modified_Value__c</fullName>
    <label>Modified Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>