unpackaged/main/default/objects/tspa__visual_journey_session_type__c/fields/tspa__Tablet__c.field-meta.xml
<CustomField>
    <fullName>tspa__Tablet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tablet</label>
    <type>Checkbox</type>
</CustomField>