unpackaged/main/default/objects/tspa__visual_journey_session_type__c/listViews/tspa__All_Flows.listView-meta.xml
<ListView>
    <fullName>tspa__All_Flows</fullName>
    <columns>NAME</columns>
    <columns>tspa__Original_Value__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>